// Wurzel-Build: gemeinsame Konfiguration fuer die Subprojekte. ':library' ist die veroeffentlichte
// Bruecken-Bibliothek (Package de.makno.vaadinexcelexport), ':app' die Spring-Boot/Vaadin-Demo
// (nicht veroeffentlicht). Projekt-spezifische Plugins/Abhaengigkeiten stehen in den jeweiligen
// Subprojekt-Build-Skripten (library/build.gradle, app/build.gradle).
plugins {
    // Nur als Klassenpfad-Bereitstellung; angewendet wird Spotless je Subprojekt (siehe unten).
    id 'com.diffplug.spotless' version '6.25.0' apply false
}

subprojects {
    group = 'de.makno.vaadinexcelexport'
    version = '1.0.0-SNAPSHOT'

    repositories {
        // Lokales Maven-Repo (~/.m2) fuer das selbst publizierte de.makno.xlsxbuilder:xlsxbuilder.
        mavenLocal()
        mavenCentral()
    }

    // Java-Quellcode wird mit palantir-java-format formatiert (ueber Spotless).
    apply plugin: 'com.diffplug.spotless'
    spotless {
        java {
            palantirJavaFormat('2.39.0')
        }
    }

    // Java 21 ueber die Gradle-Toolchain – reaktiv, sobald ein Subprojekt das Java-Plugin anwendet
    // (java-library bzw. spring-boot/java). Plattformunabhaengig.
    plugins.withType(JavaPlugin).configureEach {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }
    }

    // UTF-8 erzwingen: Quellen enthalten Umlaute (ae/oe/ue) in Kommentaren und String-Literalen.
    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    // Javadoc-Kontrolle: prueft Referenzen/Syntax/HTML (zerbrochene @link schlagen fehl), ignoriert
    // aber fehlende Kommentare an privaten Members ("-missing"). UTF-8 fuer Umlaute.
    tasks.withType(Javadoc).configureEach {
        options.encoding = 'UTF-8'
        options.addStringOption('Xdoclint:all,-missing', '-quiet')
    }
}
